--- a/client/src/index.css
+++ b/client/src/index.css
@@ -74,14 +74,14 @@ body {
     transition: all 0.1s;
   }
   .TaskContainer {
-    max-width: 700px;
+    max-width: 900px;
     margin: 0 auto;
   }
   .TaskContainer li {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 20px;
+    gap: 50px;
     background-color: #97a1d3;
     padding: 15px;
     margin-bottom: 20px;
@@ -89,7 +89,7 @@ body {
     color: #003341;
     font-size: 24px;
   }
-  .TaskContainer li p {
+  .TaskContainer li p.name {
     flex-grow: 1;
     text-align: left;
   }
